# subsuber

./: .gitignore  README  srt.txt  subsuber.cabal
src/: cui.hs  main.hs  srt.hs  subtitle.hs  tests.hs  timing.hs  utils.hs
