name: Subsuber
version: 0.1
cabal-version: -any
build-type: Simple
license: AllRightsReserved
license-file: ""
copyright:
maintainer:
build-depends: QuickCheck -any, base -any, haskell98 -any,
               parsec -any, regex-posix -any, time -any
stability:
homepage:
package-url:
bug-reports:
synopsis: Simple utility to merge, split and adjust SRT subtitles
description: .
category:
author:
tested-with:
data-files:
data-dir: ""
extra-source-files:
extra-tmp-files:
 
executable: subsuber
main-is: main.hs
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: src
other-modules: SRT Utils Main Subtitle Timing Tests CUI
ghc-prof-options:
ghc-shared-options:
ghc-options:
hugs-options:
nhc98-options:
jhc-options: